--- a/trunk/Molecule.WebSite/App_Themes/default/molecule.css
+++ b/trunk/Molecule.WebSite/App_Themes/default/molecule.css
@@ -52,8 +52,7 @@ h2 { font-size: 160%; }
 {
 	text-align: center;
 	vertical-align: middle;
-	border:1px 
-	solid #999999;
+	border:1px solid #999999;
 }
 
 .customtabstyle .ajax__tab_inner 
@@ -72,5 +71,13 @@ h2 { font-size: 160%; }
 	background:#d3d7cf;
 }
 .customtabstyle .ajax__tab_body {
+	background:#d3d7cf;
+}
+.errorDetails
+{
+	font-weight: bold;
+	cursor:pointer;
+}
+
 	background:#d3d7cf;
 }
