--- a/trunk/Molecule.WebSite/App_Themes/bloup/molecule.css
+++ b/trunk/Molecule.WebSite/App_Themes/bloup/molecule.css
@@ -11,30 +11,29 @@ img
 	border-style:none;
 }
 
-.menuPanel
+#menuPanel
 {
 	float: left;
     width: 170px;
     position: absolute;
     background-color: #0e2426;
     padding:10px;
+    top:40px;
+}
+
+.menuContent
+{
 }
 
 #maincontentPanel
 {
 	position:relative;
     right: 5px;
-    width:695px;
+    width:665px;
     left:200px;
-    
-    
-}
-
-#maincontentPlaceHolder
-{
-	padding:16px;
-	margin-bottom:20px;
-	
+    padding:16px;
+    margin-top:40px;
+	margin-bottom:20px;   
 }
 
 #pagePanel
@@ -63,6 +62,29 @@ img
 	text-align:center;
 }
 
+#header
+{
+	float:left;
+	position:absolute;
+	top:0px;
+	right:0px;
+	left:0px;
+	height:30px;
+	padding:5px;
+	line-height:0px;
+	background-color:#f57900;
+}
+
+.tabTitle
+{
+	margin:5px;
+	float:left;
+	position:relative;
+}
+
+
+
+
 .invisible
 {
     display:none;
@@ -75,12 +97,18 @@ h2
 	text-transform:uppercase;
 }
 
+h1
+{
+	font-size:x-large;
+}
+
 a:link
 {
 	text-decoration:none;
 	color:#f57900;
 	font-weight:bolder;
 }
+
 
 a:active{text-decoration:none; color:#f57900;	font-weight:bolder;}
 a:visited{text-decoration:none; color:#f57900;	font-weight:bolder;}
@@ -93,9 +121,19 @@ table thead
 	background-color:#f57900;
 }
 
-tr:hover { 
+#maincontentPanel tr:hover { 
     background-color:#999999;
     border-width : 0px;
+}
+
+#pageTitle
+{
+	float:right;
+}
+
+#moleculeTitle
+{
+	float:left;
 }
 
 table tr
@@ -106,4 +144,44 @@ table tr
 table td
 {
 	padding:4px;
+}
+
+.tabSelectedTitle
+{
+	float:left;
+	margin:5px;
+	position:relative;
+}
+
+.tabSelectedTitle a:active
+{
+	color:#ffffff;
+}
+
+.tabSelectedTitle a:link
+{
+	color:#ffffff;
+}
+
+.tabSelectedTitle a:visited
+{
+	color:#ffffff;
+}
+
+.loginPanel
+{
+	margin-left: auto;
+	margin-right: auto;
+	background-color:#2e3436;
+	position:absolute;
+	left:0px;
+	right:0px;
+	top:40px;
+}
+
+.errorDetails
+{
+	font-weight: bold;
+	cursor:pointer;
+	color:#f57900;
 }
