--- a/trunk/Molecule.WebSite/App_Themes/bloup/molecule.css
+++ b/trunk/Molecule.WebSite/App_Themes/bloup/molecule.css
@@ -127,23 +127,21 @@ img
 	background-color:#f57900;
 }
 
-#songInformationPanel
+.informationPanel
 {
-	clear:both;
+    display : none;
+    border-color : #f57900;
+    border-width:1px;
+    border-style:solid;
+    min-height: 100%;
+    height: 100%;
+    width:100%;
 }
 
-#songsLabelPanel
+.informationPanel img
 {
-	float:left;
-}
-
-#coverArtPanel img
-{
-	width: 100px;
-	height: 100px;
-	cursor:move;
-	margin-left:10px;
-	
+    float: left; 
+    margin: 0 6px 6px 0;
 }
 
 .tabTitle
