--- a/trunk/Molecule.WebSite/atomes/webmusic/style/layout.css
+++ b/trunk/Molecule.WebSite/atomes/webmusic/style/layout.css
@@ -71,24 +71,6 @@ select
 	cursor:pointer;
 }
 
-#fileNotFoundPanel
-{
-    display : none;
-    background-color : #fce94f;
-    border-color : #ef2929;
-    border-width:1px;
-    border-style:solid;
-    min-height: 100%;
-    height: 100%;
-    width:100%;
-}
-
-#fileNotFoundPanel img
-{
-    float: left; 
-    margin: 0 6px 6px 0;
-}
-
 #songscontainer
 {
 	position: relative;
@@ -118,3 +100,20 @@ select
 	font-weight:bolder;
 }
 
+#songInformationPanel
+{
+	clear:both;
+}
+
+#songsLabelPanel
+{
+	float:left;
+}
+
+#coverArtPanel img
+{
+	width: 100px;
+	height: 100px;
+	cursor:move;
+	margin-left:10px;
+}
