--- a/trunk/Molecule.WebSite/Page.Master
+++ b/trunk/Molecule.WebSite/Page.Master
@@ -46,10 +46,14 @@
                     <asp:Label runat="server" ID="welcomeLabel" Text="<%$Resources:Welcome%>" />
                     <asp:LoginName ID="LoginName1" runat="server" />
                     !
-                    <asp:TreeView id="NavigationTree" runat="Server"
-                         DataSourceID="SiteMapDataSource" ImageSet="Arrows">
                     
-                    </asp:TreeView>
+                    <ul style="list-style-type:none">
+                    <asp:Repeater runat="server" ID="menu" DataSourceID="SiteMapDataSource">
+                    <ItemTemplate>
+                        <li><asp:HyperLink runat="server" NavigateUrl='<%# Eval("Url") %>' Text='<%# Eval("Title") %>'></asp:HyperLink></li>
+                        </ItemTemplate>
+                    </asp:Repeater>
+                    </ul>
                     <asp:SiteMapDataSource ID="SiteMapDataSource" runat="server" ShowStartingNode="False" />
                     <asp:LoginStatus ID="loginStatus" runat="server" />
                 </asp:Panel>
