--- a/trunk/Molecule.WebSite/atomes/webmusic/style/layout.css
+++ b/trunk/Molecule.WebSite/atomes/webmusic/style/layout.css
@@ -71,6 +71,26 @@ select
 	cursor:pointer;
 }
 
+#playlistTable tr:hover .listRemove
+{
+	background: url("../images/list-remove.png") no-repeat;
+}
+
+.listRemove span
+{
+	visibility:hidden;
+}
+
+#playlistTable
+{
+	border-collapse: collapse;
+}
+
+#playlistTable img
+{
+	cursor:pointer;
+}
+
 #songscontainer
 {
 	position: relative;
