coverArt : revert to large size download. download does not use temporary file anymore.

--- a/trunk/Molecule.WebSite/App_Themes/bloup/molecule.css
+++ b/trunk/Molecule.WebSite/App_Themes/bloup/molecule.css
@@ -172,11 +172,15 @@ img
 	position:relative;
 }
 
+.thinBorder,
 .thinBox
 {
 	border:1px;
 	border-style:solid;
 	border-color:#444444;
+}
+.thinBox
+{
 	padding:2px;
 }
 
