webphoto calendar : real datas webphoto : add layout.css molecule.css : only hover row on demand

--- a/trunk/Molecule.WebSite/App_Themes/bloup/molecule.css
+++ b/trunk/Molecule.WebSite/App_Themes/bloup/molecule.css
@@ -224,7 +224,7 @@ table thead
 }
 
 
-#maincontentPanel tr:hover { 
+.hoverTable tr:hover { 
     background-color:#999999;
     border-width : 0px;
 }
