--- a/trunk/Molecule.WebSite/atomes/photo/layout.css
+++ b/trunk/Molecule.WebSite/atomes/photo/layout.css
@@ -17,7 +17,6 @@
 .calendarItem .number
 {
 	z-index:3;
-	color:White;
 	padding-left:4px;
 	padding-top:0px;
 }
@@ -25,7 +24,7 @@
 .calendarItem .numberShadow
 {
 	z-index:2;
-	color:Black;
+	color:Gray;
 	padding-left:5px;
 	padding-top:1px;
 }
