--- a/trunk/Molecule.WebSite/App_Themes/bloup/molecule.css
+++ b/trunk/Molecule.WebSite/App_Themes/bloup/molecule.css
@@ -1,15 +1,26 @@
-﻿body
+﻿@variables
 {
-	background-color: #0e2426;
+	BackColor:#0e2426;
+	BackColorLight:#2e3436;
+	BackColorDark:#111111;
+	FrontColor:#ffffff;
+	FrontColorDark:#999999;
+	HighLightColor:#f57900;
+	LineColor:#444444;
+}
+
+body
+{
+	background-color: var(BackColor);
     font-family: Candara, Arial, Helvetica, sans-serif;
     font-size:13px;
-    color:White;
+    color:var(FrontColor);
 }
 
 
 .messagesPanelTitle
 {
-	color:#999999;
+	color:var(FrontColorDark);
 	font-size:medium;
 }
 
@@ -23,12 +34,12 @@
 
 .message
 {
-	border-bottom: 1px solid #f57900;
+	border-bottom: 1px solid var(HighLightColor);
 }
 
 .messageDate
 {
-	color:#999999;
+	color:var(FrontColorDark);
     font-size :10px;
     text-align:right;
     white-space:nowrap;
@@ -49,7 +60,7 @@
 
 #menuPanel
 {
-    background-color: #0e2426;
+    background-color: var(BackColor);
     padding:10px;
     z-index : 1;
 }
@@ -66,7 +77,7 @@
 
 #logPanel
 {
-    background-color: #0e2426;
+    background-color: var(BackColor);
     padding:10px;
     z-index : 2;
     margin-top : 2px;
@@ -81,14 +92,14 @@
 #logPanel li
 {
     list-style-type : none;
-    border-bottom: 1px solid #f57900;
+    border-bottom: 1px solid var(HighLightColor);
     margin-left : 0px;
     width : 100%;
 }
 
 #logPanel li:hover
 {
-    background-color: #999999;
+    background-color: var(FrontColorDark);
 }
 
 .menuContent
@@ -112,14 +123,14 @@
 	margin-left: auto;
     margin-right: auto;
 	width:920px;
-    background-color:#2e3436;
+    background-color:var(BackColorLight);
 }
 
 #footer
 {
 	position:relative;
 	bottom:0px;
-	background-color:#111111;
+	background-color:var(BackColorDark);
 	padding:5px;
 	text-align:center;
 }
@@ -130,7 +141,7 @@
 	padding:5px;
 	height:30px;
 	line-height:0px;
-	background-color:#f57900;
+	background-color:var(HighLightColor);
 }
 
 
@@ -147,8 +158,8 @@
 {
 	z-index:1;
 	padding:6px;
-	background-color:#2e3436;
-    border-color : #f57900;
+	background-color:var(BackColorLight);
+    border-color : var(HighLightColor);
     border-width:1px;
     border-style:solid;
     border-top:none;
@@ -173,7 +184,7 @@
 {
 	border:1px;
 	border-style:solid;
-	border-color:#444444;
+	border-color:var(LineColor);
 }
 .thinBox
 {
@@ -189,7 +200,7 @@
 
 h2
 {
-	color:#999999;
+	color:var(FrontColorDark);
 	font-size:large;
 	text-transform:uppercase;
 	margin-left:4px;
@@ -206,31 +217,31 @@ h1
 a:link
 {
 	text-decoration:none;
-	color:#f57900;
+	color:var(HighLightColor);
 	font-weight:bolder;
 }
 
 
-a:active{text-decoration:none; color:#f57900;	font-weight:bolder;}
-a:visited{text-decoration:none; color:#f57900;	font-weight:bolder;}
+a:active{text-decoration:none; color:var(HighLightColor);	font-weight:bolder;}
+a:visited{text-decoration:none; color:var(HighLightColor);	font-weight:bolder;}
 a:hover{text-decoration:none; color:White;}
 
 
 table thead
 {
 	font-weight:bolder;
-	background-color:#f57900;
+	background-color:var(HighLightColor);
 }
 
 
 .hoverTable tr:hover { 
-    background-color:#999999;
+    background-color:var(FrontColorDark);
     border-width : 0px;
 }
 
 .selectedRow
 {
-	color:#f57900;
+	color:var(HighLightColor);
 	font-weight:bolder;
 }
 
@@ -269,24 +280,24 @@ table td
 
 .tabSelectedTitle a:active
 {
-	color:#ffffff;
+	color:var(FrontColor);
 }
 
 .tabSelectedTitle a:link
 {
-	color:#ffffff;
+	color:var(FrontColor);
 }
 
 .tabSelectedTitle a:visited
 {
-	color:#ffffff;
+	color:var(FrontColor);
 }
 
 .loginPanel
 {
 	margin-left: auto;
 	margin-right: auto;
-	background-color:#2e3436;
+	background-color:var(BackColorLight);
 	position:absolute;
 	left:0px;
 	right:0px;
@@ -297,7 +308,7 @@ table td
 {
 	font-weight: bold;
 	cursor:pointer;
-	color:#f57900;
+	color:var(HighLightColor);
 }
 
 #updateProgress  
