--- a/trunk/Molecule.WebSite/atomes/photo/style/photo.css
+++ b/trunk/Molecule.WebSite/atomes/photo/style/photo.css
@@ -1,9 +1,12 @@
 ﻿#photoCurrent
 {
 	text-align:center;
-	border:solid 1px;
 }
 
+#photoCurrent img
+{
+	border:solid 1px;
+}
 
 #NextPhotoLink,
 #PreviousPhotoLink
@@ -18,4 +21,9 @@
 	width:650px;
 	height:400px;
 	border:solid 1px;
+}
+
+#map img
+{	
+	border:none;
 }
